--- a/print.html
+++ b/print.html
@@ -3,7 +3,8 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>whoami - nagilog</title>
+        <title>nagilog</title>
+        <meta name="robots" content="noindex" />
 
 
         <!-- Custom HTML head -->
@@ -81,7 +82,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="whoami.html" class="active">whoami</a></li><li class="chapter-item expanded "><div>tag</div></li><li><ol class="section"><li class="chapter-item expanded "><a href="tags/rust.html">Rust</a></li></ol></li><li class="chapter-item expanded "><div>all</div></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="whoami.html">whoami</a></li><li class="chapter-item expanded "><div>tag</div></li><li><ol class="section"><li class="chapter-item expanded "><a href="tags/rust.html">Rust</a></li></ol></li><li class="chapter-item expanded "><div>all</div></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -144,15 +145,13 @@
                     <main>
                         <h1 id="whoami"><a class="header" href="#whoami">whoami</a></h1>
 <p>なぎです</p>
+<div style="break-before: page; page-break-before: always;"></div><h1 id="tag-rust"><a class="header" href="#tag-rust">tag: Rust</a></h1>
 
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
 
-                            <a rel="next" href="tags/rust.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
-                                <i class="fa fa-angle-right"></i>
-                            </a>
 
                         <div style="clear: both"></div>
                     </nav>
@@ -161,9 +160,6 @@
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
 
-                    <a rel="next" href="tags/rust.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
-                        <i class="fa fa-angle-right"></i>
-                    </a>
             </nav>
 
         </div>
@@ -186,6 +182,11 @@
 
         <!-- Custom JS scripts -->
 
+        <script type="text/javascript">
+        window.addEventListener('load', function() {
+            window.setTimeout(window.print, 100);
+        });
+        </script>
 
     </body>
 </html>
