--- a/all.html
+++ b/all.html
@@ -3,8 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Page not found - nagilog</title>
-        <base href="/">
+        <title>all - nagilog</title>
 
 
         <!-- Custom HTML head -->
@@ -82,7 +81,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="whoami.html">whoami</a></li><li class="chapter-item expanded "><div>tag</div></li><li><ol class="section"><li class="chapter-item expanded "><a href="tags/rust.html">Rust</a></li></ol></li><li class="chapter-item expanded "><a href="all.html">all</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="articles/20220902_speed_test_slice_vs_pointer.html">Rustのスライスとポインタの速度比較 (20220902)</a></li></ol></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="whoami.html">whoami</a></li><li class="chapter-item expanded "><div>tag</div></li><li><ol class="section"><li class="chapter-item expanded "><a href="tags/rust.html">Rust</a></li></ol></li><li class="chapter-item expanded "><a href="all.html" class="active">all</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="articles/20220902_speed_test_slice_vs_pointer.html">Rustのスライスとポインタの速度比較 (20220902)</a></li></ol></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -143,14 +142,21 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="document-not-found-404"><a class="header" href="#document-not-found-404">Document not found (404)</a></h1>
-<p>This URL is invalid, sorry. Please use the navigation bar or search to continue.</p>
+                        <ul>
+<li><a href="./articles/20220902_speed_test_slice_vs_pointer.html">Rustのスライスとポインタの速度比較 (20220902)</a></li>
+</ul>
 
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
+                            <a rel="prev" href="tags/rust.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                                <i class="fa fa-angle-left"></i>
+                            </a>
 
+                            <a rel="next" href="articles/20220902_speed_test_slice_vs_pointer.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                                <i class="fa fa-angle-right"></i>
+                            </a>
 
                         <div style="clear: both"></div>
                     </nav>
@@ -158,7 +164,13 @@
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
+                    <a rel="prev" href="tags/rust.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                        <i class="fa fa-angle-left"></i>
+                    </a>
 
+                    <a rel="next" href="articles/20220902_speed_test_slice_vs_pointer.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                        <i class="fa fa-angle-right"></i>
+                    </a>
             </nav>
 
         </div>
