--- a/print.html
+++ b/print.html
@@ -147,7 +147,7 @@
 <p>なぎです</p>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="tag-rust"><a class="header" href="#tag-rust">tag: Rust</a></h1>
 <ul>
-<li><a href="tags/./articles/20220902_speed_test_slice_vs_pointer.html">Rustのスライスとポインタの速度比較 (20220902)</a></li>
+<li><a href="tags/../articles/20220902_speed_test_slice_vs_pointer.html">Rustのスライスとポインタの速度比較 (20220902)</a></li>
 </ul>
 <div style="break-before: page; page-break-before: always;"></div><ul>
 <li><a href="./articles/20220902_speed_test_slice_vs_pointer.html">Rustのスライスとポインタの速度比較 (20220902)</a></li>
