--- a/print.html
+++ b/print.html
@@ -163,7 +163,7 @@ pointer_time: 0.485
 </code></pre>
 <p>コードはこれ</p>
 <p>変に最適化されないようにしたつもり</p>
-<pre><code>use std::time::Instant;
+<pre><code class="language-Rust">use std::time::Instant;
 use rand::Rng;
 
 fn main() {
