--- a/all.html
+++ b/all.html
@@ -81,7 +81,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="whoami.html">whoami</a></li><li class="chapter-item expanded "><div>tag</div></li><li><ol class="section"><li class="chapter-item expanded "><a href="tags/rust.html">Rust</a></li></ol></li><li class="chapter-item expanded "><a href="all.html" class="active">all</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="articles/20220902_speed_test_slice_vs_pointer.html">Rustのスライスとポインタの速度比較 (20220902)</a></li></ol></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="whoami.html">whoami</a></li><li class="chapter-item expanded "><div>tag</div></li><li><ol class="section"><li class="chapter-item expanded "><a href="tags/rust.html">Rust</a></li><li class="chapter-item expanded "><a href="tags/wasm.html">WASM</a></li></ol></li><li class="chapter-item expanded "><a href="all.html" class="active">all</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="articles/20220905_wasmer.html">wasmerでランタイム上からホスト関数を呼び出すメモ (20220905)</a></li><li class="chapter-item expanded "><a href="articles/20220902_speed_test_slice_vs_pointer.html">Rustのスライスとポインタの速度比較 (20220902)</a></li></ol></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -144,17 +144,18 @@
                     <main>
                         <ul>
 <li><a href="./articles/20220902_speed_test_slice_vs_pointer.html">Rustのスライスとポインタの速度比較 (20220902)</a></li>
+<li><a href="./articles/20220905_wasmer.html">wasmerでランタイム上からホスト関数を呼び出すメモ (20220905)</a></li>
 </ul>
 
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
-                            <a rel="prev" href="tags/rust.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                            <a rel="prev" href="tags/wasm.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                                 <i class="fa fa-angle-left"></i>
                             </a>
 
-                            <a rel="next" href="articles/20220902_speed_test_slice_vs_pointer.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                            <a rel="next" href="articles/20220905_wasmer.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                                 <i class="fa fa-angle-right"></i>
                             </a>
 
@@ -164,11 +165,11 @@
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
-                    <a rel="prev" href="tags/rust.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                    <a rel="prev" href="tags/wasm.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                         <i class="fa fa-angle-left"></i>
                     </a>
 
-                    <a rel="next" href="articles/20220902_speed_test_slice_vs_pointer.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                    <a rel="next" href="articles/20220905_wasmer.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="fa fa-angle-right"></i>
                     </a>
             </nav>
